--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <title>Список машин</title>
 </head>
 <body>
+<h1>Список машин</h1>
 
+<ul>
+    <li th:each="car : ${cars}">
+        <span th:text="'Марка: ' + ${car.brand} + ', Модель: ' + ${car.model} + ', Год: ' + ${car.age}"></span>
+    </li>
+</ul>
+
+<a href="/">Вернуться в начало</a>
 </body>
 </html>
