--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Список пользователей</title>
 </head>
 <body>
+<meta charset="UTF-8"/>
 <h1>Список пользователей</h1>
 
 <table border="1">
     <tr>
-        <th>ID</th><th>Имя</th><th>Фамилия</th><th>Действия</th>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Действия</th>
     </tr>
     <tr th:each="user : ${users}">
         <td th:text="${user.id}"></td>
@@ -17,16 +21,16 @@
         <td th:text="${user.lastname}"></td>
         <td>
             <!-- Форма для редактирования -->
-            <form th:action="@{/users/edit}" method="post" style="display:inline;">
-                <input type="hidden" name="id" th:value="${user.id}" />
-                <input type="text" name="firstname" th:value="${user.firstname}" />
-                <input type="text" name="lastname" th:value="${user.lastname}" />
+            <form th:action="@{/users/edit}" method="post" style="display:inline;" accept-charset="UTF-8">
+                <input type="hidden" name="id" th:value="${user.id}"/>
+                <input type="text" name="firstname" th:value="${user.firstname}"/>
+                <input type="text" name="lastname" th:value="${user.lastname}"/>
                 <button type="submit">Обновить</button>
             </form>
 
             <!-- Форма для удаления -->
             <form th:action="@{/users/delete}" method="post" style="display:inline;">
-                <input type="hidden" name="id" th:value="${user.id}" />
+                <input type="hidden" name="id" th:value="${user.id}"/>
                 <button type="submit">Удалить</button>
             </form>
         </td>
@@ -34,9 +38,9 @@
 </table>
 
 <h2>Добавить нового пользователя</h2>
-<form th:action="@{/users/add}" method="post">
-    <label>Имя: <input type="text" name="firstname" /></label><br/>
-    <label>Фамилия: <input type="text" name="lastname" /></label><br/>
+<form th:action="@{/users/add}" method="post" accept-charset="UTF-8">
+    <label>Имя: <input type="text" name="firstname"/></label><br/>
+    <label>Фамилия: <input type="text" name="lastname"/></label><br/>
     <button type="submit">Добавить</button>
 </form>
 
